# ml-training-2025-s2-pytorch

./: README.md  main.py  pyproject.toml
src/T01_basic_pytorch/: S01_basic_operations.ipynb  S02_autograd.ipynb  S03_building_networks.ipynb  S04_model_visualization.ipynb
src/T02_mlp/: S01_mlp_round_1.ipynb  S02_dataset.ipynb  S03_early_stopping.ipynb  S04_tensorboard.ipynb  S05_checkpoint.ipynb  S06_mlp_round_2_train.ipynb  S07_mlp_round_2_eval.ipynb  data.xlsx
src/T02_mlp/lectures/: S01.ipynb  S02.ipynb
src/T03_cnn_simple/: S01_mnist_data_prep.ipynb  S02.ipynb  S02_model.ipynb  S03_loss_fn.ipynb  S04_metrices.ipynb  S05_cnn_simple_train.ipynb  mnist_small.pickle
src/T04_cnn_models/: S01_pretrained_models.ipynb  S02_A_collect_webcam.py  S02_B_fine_tuning.ipynb
src/pt_runner/: cnn.py
