[project]
name = "ml-training-2025-s2-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "ruff>=0.11.10",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tbparse>=0.0.9",
    "tensorboard>=2.19.0",
    "tensorflow>=2.19.0",
    "torch>=2.7.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.0",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
]
